--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   emby:
     image: linuxserver/emby
-    container_name: emby
+    container_name: emby_normal_scrape
     environment:
       - PUID=1000
       - PGID=1000
@@ -11,15 +11,15 @@ services:
     volumes:
       - ./var_lib_emby:/config
       - ./transcoding:/transcode
-      - /mnt/EmbyMedia_play:/mnt/EmbyMedia
+      - /mnt/EmbyMedia_normal_scrape:/mnt/EmbyMedia
     devices:
       - /dev/dri:/dev/dri
     ports:
-      - 8098:8098
+      - 18098:18098
     restart: unless-stopped
   emby-dmm:
     image: linuxserver/emby
-    container_name: emby_dmm
+    container_name: emby_VIP_scrape
     environment:
       - PUID=1000
       - PGID=1000
@@ -28,10 +28,10 @@ services:
     volumes:
       - ./var_lib_emby-dmm:/config
       - ./transcoding:/transcode
-      - /mnt/EmbyDmm:/mnt/EmbyDmm
+      - /mnt/EmbyMedia_VIP_scrape:/mnt/EmbyMedia
     devices:
       - /dev/dri:/dev/dri
     ports:
-      - 8198:8198
+      - 28098:28098
     restart: unless-stopped
 
